# hone

./: .gitignore  AGENTS.md  CITATIONS.md  CLAUDE.md  CONTRIBUTING.md  README.md  coder.md  plan.json  pyproject.toml
.flt/: bootstrap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/agents/: flt.md
configs/warmed-drone/: knobs.json  playbook.md  prompt-template.md
examples/: agentelo-multi-challenge.sh  agentelo-single-challenge.sh  simple-grader.sh  simple-prompt.md.honed.md
examples/circle-packing/: README.md  grader.sh  placer.py
examples/scorer-json/: README.md  scorer.sh
specs/: discover.md  v1.1-ace.md
src/: harness.py
src/hone/: __init__.py  ace.py  adapter.py  bootstrap.py  cli.py  config.py  dir_target.py  gates.py  grader.py  kinds.py  observer.py  optimizer.py  policy.py  proposer.py  reflective.py  repo_frontier.py  report.py  scheduler.py  scorer.py  storage.py
src/hone/mutators/: __init__.py  anthropic_api.py  base.py  claude_code.py  custom_script.py  harness_mutator.py
tests/: conftest.py  test_cli.py  test_config.py  test_discover.py  test_e2e_smoke.py  test_gates.py  test_grader.py  test_kinds_and_proposer.py  test_mutators.py  test_policy.py  test_reflective.py  test_repo_frontier.py  test_report.py  test_scorer.py
writeup/: 2026-04-18-haiku-20train-9holdout.md  2026-04-19-hone-technical.md  2026-04-22-hone-v1-spec.md  haiku-honed-prompt-v1.md  social-drafts-2026-04-19.md
