[project]
name = "hone"
version = "0.3.0"
description = "CLI prompt optimizer that uses your coding CLI subscriptions as the mutation engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tim Waldin", email = "timnwaldin@gmail.com" }]
keywords = ["prompt", "optimization", "llm", "gepa", "claude", "codex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "gepa>=0.0.7",
    "anthropic>=0.40",
    "openai>=1.55",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
hone = "hone.cli:app"

[project.urls]
Homepage = "https://github.com/twaldin/hone"
Issues = "https://github.com/twaldin/hone/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hone"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
