[project]
name = "hone"
version = "1.0.0"
description = "Repository-state optimizer. Frontier search over git branches, coding-agent CLIs as mutators."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tim Waldin", email = "timnwaldin@gmail.com" }]
keywords = ["repository", "optimization", "llm", "coding-agent", "claude", "codex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
hone = "hone.cli:app"

[project.urls]
Homepage = "https://github.com/twaldin/hone"
Issues = "https://github.com/twaldin/hone/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hone"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
